# mesos

./: .clang-tidy  .gitignore  .reviewboardrc  README.md  docker.json
include/mesos/: version.hpp
include/mesos/slave/: paravirtualizer.hpp  paravirtualizer.proto
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am_old  Makefile.am_test  Makefile.am_test-01  Makefile.am_test-02
src/docker/: .docker.hpp.swp
src/examples/java/: test-exception-framework  test-executor  test-framework  test-log  test-multiple-executors-framework  v1-test-framework
src/examples/python/: test-executor  test-framework
src/java/: mesos.pom
src/lxc/: .lxc.cpp.swp  .lxc.hpp.swp  CMakeLists.txt  executor.cpp  executor.hpp  lxc.cpp  lxc.hpp  spec.cpp
src/pvm-tests/: CMakeLists.txt  flags.hpp
src/pvm-tests/containerizer/: docker_tests.cpp
src/python/: setup.py
src/python/cli/: setup.py
src/python/executor/: setup.py
src/python/interface/: setup.py
src/python/native/: setup.py
src/python/native_common/: ext_modules.py
src/python/scheduler/: setup.py
src/slave/containerizer/: lxc.hpp
src/slave/containerizer/mesos/: paths.cpp  paths.hpp
src/slave/containerizer/mesos/io/: switchboard.cpp  switchboard.hpp
src/slave/containerizer/mesos/isolators/gpu/: ocl.hpp  oclml.hpp
src/slave/paravirtualizer/: lxc.cpp  lxc.hpp  paravirtualizer.hpp
src/tests/: CMakeLists.txt  environment.cpp  flags.hpp  main.cpp  mock_lxc.hpp  module.cpp
src/tests/containerizer/: io_switchboard_tests.cpp
src/tests/paravirtualizer/: lxc_tests.cpp  mock_paravirtualizer.hpp
support/: gitignore  mesos-style.py
